--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+94-719335822</div>
+              <div class="col-sm-8">+94719335822</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
@@ -387,7 +387,7 @@
           <div class="card-body">
             <div class="h5">GCE Ordinary Level </div>
             <p class="category">Kahawatta Central College</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>In the school i was a extraodinary talanted student, I have worked as junior prefect for 3 years. Andalso a active member of the school media team, IT association and school athletic team. I have won several athletic competitions. Andalso i was a perfect student in acedemic. i have passed O/L exam with A grade for mathamatics. </p>
           </div>
         </div>
       </div>
@@ -512,7 +512,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/buddhi.promodya"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://twitter.com/Buddhipramodya"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="https://github.com/PramodyaWarnakula"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.linkedin.com/in/pramodya-warnakula-87574017a/"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">Pramodya Warnakula</div>
       <div class="text-center text-muted">
         <p>&copy; Pramodya Warnakula. All rights reserved.<br>Design - Pramodya Warnakula</a></p>
